<resources>
    <string name="app_name" translatable="false">VKGroups</string>


    <!--Icons fonts for counting. Icon for likes-->
    <string name="font_heart" translatable="false">&#xE87D;</string>
    <string name="font_comment" translatable="false">&#xE0B9;</string>
    <string name="font_repost" translatable="false">&#xE050;</string>

    <!--Icons fonts for Signed-->
    <string name="font_signed" translatable="false">&#xE7FD;</string>

    <!--VK App Id-->
    <integer name="com_vk_sdk_AppId">6269600</integer>
    <!--<integer name="com_vk_sdk_AppId">6142332</integer>-->


    <!--Items Navigation Drawer-->
    <string name="screen_name_news_feed_title">News</string>
    <string name="screen_name_my_posts">My Posts</string>
    <string name="screen_name_settings">Settings</string>
    <string name="screen_name_members">Members</string>
    <string name="screen_name_topics">Topics</string>
    <string name="screen_name_info">Info</string>
    <string name="screen_name_rules">Group Rules</string>
    <string name="screen_name_list_of_groups">List of Groups</string>
    <string name="screen_name_image">Image</string>
    <string name="screen_name_opened_post">Post</string>
    <string name="screen_name_comments">Comments</string>
    <string name="screen_name_opened_comment">Comment</string>
    <string name="screen_name_topic_comments">Topic Comments</string>
    <string name="current_logout">Logout</string>


    <!--Strings time posts-->
    <string name="today">Сегодня в %s</string>
    <string name="justNow">Только что</string>
    <string name="one_minutes_ago">минуту назад</string>
    <string name="two_minutes_ago">две минуты</string>
    <string name="three_minutes_ago">три минуты</string>
    <string name="number_of_minutes">%1$d минуты</string>
    <string name="hour_ago">час назад</string>
    <string name="two_hour_ago">два часа назад</string>
    <string name="three_hour_ago">три часа назад</string>
    <string name="up_to_day">сегодня в "%tH:%tM</string>
    <string name="yesterday">вчера в "%tH:%tM</string>
    <string name="fullDate">"%td %tb в %tk:%tM</string>


    <!--Strings Item Status-->
    <string name="tv_status">Статус</string>
    <string name="tv_description">Описание</string>
    <string name="tv_web_site">Веб сайт</string>
    <string name="tv_contacts">Контакты</string>
    <string name="tv_links">Ссылки</string>


    <!--Attachments string-->
    <string name="tv_views_count">%s просмотров</string>


    <!--Strings for add message and load files-->
    <string name="new_message_title">New entity</string>
    <string name="add_message_text">Add a message</string>
    <string name="message_not_published">The entry was not published. You may not have permission to publish on the group wall</string>
    <string name="loading_completed">Uploaded</string>
    <string name="loading_failed">Loading error. Ensure that the filename does not contain spaces or Cyrillic</string>


    <!--Strings for menu-->
    <string name="title_attach">attach</string>
    <string name="title_post">post</string>


    <!--Strings item_create_Post_text-->
    <string name="et_message_hint">Message</string>

    <!--Plurals Time-->
    <plurals name="time_plurals">
        <item quantity="zero">Только что</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут назад</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <!--Permission Runtime-->
    <string name="permission_explanation"> Объяснение </string>


    <!--Other-->
    <string name="current_user_id" translatable="false">Current user id: </string>


    <string name="message">Message</string>
    <string name="vk_group_default_name">VKTest</string>


    <!--Settings preference-->
    <string name="pref_push_notifications">Receive push notifications</string>
    <string name="pref_push_notification_new_post_groups_key">Groups News</string>
    <string name="pref_push_notification_news_post_groups_title">@string/pref_push_notification_new_post_groups_key</string>
    <string name="pref_push_notification_comments_my_posts_key">Comments on my post</string>
    <string name="pref_push_notification_comments_my_posts_title">@string/pref_push_notification_comments_my_posts_key</string>
    <string name="pref_push_notification_answers_to_my_comments_key">Answers to my comments</string>
    <string name="pref_push_notification_answers_to_my_comments_title">@string/pref_push_notification_answers_to_my_comments_key</string>
    <string name="need_login">To use the application you need to login!</string>


    <string name="group_rules">http://www.google.com.ua/</string>

    <string name="title_links">Ссылки</string>
    <string name="title_contacts">Контакты</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_groups">Groups</string>


    <!--Strings GroupsViewModel-->
    <string name="count_subscribe">%s подписчиков</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>
