<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_push_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_push_notification_new_post_groups_key"
            android:title="@string/pref_push_notification_news_post_groups_title"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_push_notification_comments_my_posts_key"
            android:title="@string/pref_push_notification_comments_my_posts_title"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_push_notification_answers_to_my_comments_key"
            android:title="@string/pref_push_notification_answers_to_my_comments_title"
            />


    </PreferenceCategory>
</PreferenceScreen>