<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_top"
    android:background="@color/colorDefaultWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="0dp">


    <RelativeLayout
        android:id="@+id/rv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">


        <TextView
            android:id="@+id/tv_status"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/tv_status"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/tv_status_text"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_status"
            android:layout_marginTop="4dp"
            android:autoLink="web"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            tools:text="Платформа для разработчиков приложений"/>


        <View
            android:id="@+id/divider_view_status"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_status_text"
            android:background="@color/colorIconDivider"/>


        <TextView
            android:id="@+id/tv_description"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:layout_below="@id/divider_view_status"
            android:text="@string/tv_description"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/tv_description_text"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_description"
            android:layout_marginTop="4dp"
            android:autoLink="web"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            tools:text="Группа посвящена разработке приложений на основе платформы ВКонтакте API и всему, что с ней связано.

API позволяет создавать интересные, интерактивные и популярные приложения. Встроенные средства монетизации позволяют приносить доход разработчикам приложений, начиная с первых дней запуска."/>


        <View
            android:id="@+id/divider_view_desc"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_description_text"
            android:background="@color/colorIconDivider"/>


        <TextView
            android:id="@+id/tv_site"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/divider_view_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/tv_web_site"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tv_site_text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_site"
            android:layout_marginTop="4dp"
            android:autoLink="web"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            tools:text="http://www.google.com/"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>