<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="52dp">


    <!--Container for counting comments-->

    <RelativeLayout
        android:id="@+id/rl_comments"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/margin_material_design"
        android:paddingRight="@dimen/margin_material_design"
        android:layout_alignParentLeft="true">


        <TextView
            android:id="@+id/tv_comments_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:lines="1"
            android:text="@string/font_comment"
            android:textColor="@color/colorIcon"
            android:textSize="14sp"
            android:layout_marginRight="4dp"/>


        <TextView
            android:id="@+id/tv_comments_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_comments_icon"
            android:layout_toRightOf="@id/tv_comments_icon"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/font_repost"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="1355"/>

    </RelativeLayout>

    <!--Container for counting repost-->

    <RelativeLayout
        android:id="@+id/rl_reposts"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:layout_toEndOf="@id/rl_comments"
        android:paddingStart="@dimen/margin_material_design"
        android:paddingLeft="@dimen/margin_material_design"
        android:paddingRight="@dimen/margin_material_design"
        android:layout_toRightOf="@id/rl_comments">


        <TextView
            android:id="@+id/tv_reposts_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/font_repost"
            android:textColor="@color/colorIcon"
            android:textSize="20sp"
            android:layout_marginRight="4dp"/>


        <TextView
            android:id="@+id/tv_reposts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_reposts_icon"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="12"
            android:layout_toRightOf="@id/tv_reposts_icon"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_likes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/rl_reposts"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_material_design"
        android:paddingLeft="@dimen/margin_material_design"
        android:paddingRight="@dimen/margin_material_design"
        android:layout_toRightOf="@id/rl_reposts">


        <TextView
            android:id="@+id/tv_likes_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:lines="1"
            android:text="@string/font_heart"
            android:textColor="@color/colorIcon"
            android:textSize="16sp"
            android:layout_marginRight="4dp"/>


        <TextView
            android:id="@+id/tv_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_likes_icon"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="1355"
            android:layout_toRightOf="@id/tv_likes_icon"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_material_design"
        android:lines="1"
        android:textColor="#909090"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:text="Date"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_material_design"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/my_gradient"/>

</RelativeLayout>